%% title: ERD 05a1 - Phase / Milestone
%% Module: Project work-breakdown structure, top level (part 1 of 4, see erd-05a2 for WorkPackage/Task/Bug, erd-05b1/05b2 for approval workflow)

erDiagram
    direction LR

%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    PmPhase {
        UUID id
        UUID project_id
        string phase_code
        string phase_name
        string description
        string color
        date start_date
        date end_date
        string owner
        string status
        UUID dependency
        int progress
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmMilestone {
        UUID id
        UUID phase_id
        string milestone_name
        string description
        date due_date
        string color
        string status
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmPhase |o--o{ PmPhase : "depends on"
    PmPhase ||--o{ PmMilestone : "has"

